# conciliacao-whatsapp-nubank

./: .gitignore  README.md  Sistema_Financeiro_Turbo_GPU.py  checar_pastas.py  pyproject.toml
Site/: index.html
automacao/: .env.example  docker-compose.yml  setup-servidor.sh
automacao/ocr-service/: Dockerfile  main.py
automacao/postgres/: init.sql
